--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -74,10 +74,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZ4-Le-U6j">
-                                <rect key="frame" x="164" y="349" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="134" y="349" width="107" height="30"/>
+                                <state key="normal" title="Server Connect"/>
                                 <connections>
                                     <action selector="connectButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FdK-LA-SHL"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1y-1j-cMv">
+                                <rect key="frame" x="151.5" y="401" width="71" height="30"/>
+                                <state key="normal" title="Read Data"/>
+                                <connections>
+                                    <action selector="readButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zhx-b5-cPg"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -89,6 +96,7 @@
                             <constraint firstItem="M2K-Ex-yds" firstAttribute="top" secondItem="krm-qM-O3l" secondAttribute="bottom" constant="10" id="Ei2-zx-Nt6"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="trailing" secondItem="krm-qM-O3l" secondAttribute="trailing" id="HXc-9f-Je8"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="J4a-z2-tms"/>
+                            <constraint firstItem="m1y-1j-cMv" firstAttribute="top" secondItem="dZ4-Le-U6j" secondAttribute="bottom" constant="22" id="NrP-j8-q11"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="top" secondItem="Qt9-Kp-DXd" secondAttribute="bottom" constant="25" id="RiZ-JZ-Eql"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="leading" secondItem="ktI-wg-KUE" secondAttribute="leading" id="SMa-DK-FXM"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="leading" secondItem="Qt9-Kp-DXd" secondAttribute="leading" id="Uds-pq-l6b"/>
@@ -99,6 +107,7 @@
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bgb-EA-qgt"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="trailing" secondItem="R14-ME-uVA" secondAttribute="trailing" id="dX2-WU-dF3"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="trailing" secondItem="ANq-OS-WMB" secondAttribute="trailing" id="hXE-cQ-qc2"/>
+                            <constraint firstItem="m1y-1j-cMv" firstAttribute="centerX" secondItem="dZ4-Le-U6j" secondAttribute="centerX" id="kJY-pq-gv7"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="trailing" secondItem="Qt9-Kp-DXd" secondAttribute="trailing" id="m86-rc-Ypj"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="leading" secondItem="Qt9-Kp-DXd" secondAttribute="leading" id="oQu-V8-EsU"/>
                             <constraint firstItem="ktI-wg-KUE" firstAttribute="leading" secondItem="M2K-Ex-yds" secondAttribute="leading" id="slp-pi-gTT"/>
@@ -112,6 +121,7 @@
                         <outlet property="butConnect" destination="M2K-Ex-yds" id="rHM-0H-hjG"/>
                         <outlet property="connectButton" destination="dZ4-Le-U6j" id="DEA-yj-Guo"/>
                         <outlet property="progress" destination="anH-68-myp" id="XWS-pR-6FT"/>
+                        <outlet property="readButton" destination="m1y-1j-cMv" id="kjg-UG-PUm"/>
                         <outlet property="switcher" destination="krm-qM-O3l" id="qq0-nU-zLb"/>
                         <outlet property="txtPwd" destination="R14-ME-uVA" id="CNA-3F-AHN"/>
                         <outlet property="txtSSID" destination="Qt9-Kp-DXd" id="9JE-Wx-tQf"/>
