Test app now captures mac address from qr code...

--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     <action selector="butPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ENc-Ea-TpZ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="上海汉枫电子科技智能配网" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ANq-OS-WMB">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO MAC SAVED YET" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ANq-OS-WMB">
                                 <rect key="frame" x="32" y="28" width="311" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -94,11 +94,25 @@
                                     <action selector="killButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cqo-B0-yGq"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7mE-2A-vrC">
+                                <rect key="frame" x="67" y="510" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rZD-zL-jMM">
+                                <rect key="frame" x="127" y="305" width="121" height="30"/>
+                                <state key="normal" title="Capture QR Code"/>
+                                <connections>
+                                    <action selector="captureButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KdW-99-q3H"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="rZD-zL-jMM" firstAttribute="centerX" secondItem="anH-68-myp" secondAttribute="centerX" id="14P-6H-0hn"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="top" secondItem="ICH-LN-aj3" secondAttribute="bottom" constant="2" id="B3z-t4-meO"/>
                             <constraint firstItem="krm-qM-O3l" firstAttribute="top" secondItem="R14-ME-uVA" secondAttribute="bottom" constant="10" id="BcH-SB-hHe"/>
+                            <constraint firstItem="7mE-2A-vrC" firstAttribute="top" secondItem="BMi-o0-7L8" secondAttribute="bottom" constant="29" id="Bs1-sA-x7j"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7mE-2A-vrC" secondAttribute="bottom" constant="29" id="CId-lz-6TD"/>
                             <constraint firstItem="dZ4-Le-U6j" firstAttribute="top" secondItem="anH-68-myp" secondAttribute="bottom" constant="77" id="Cni-zo-lhy"/>
                             <constraint firstItem="M2K-Ex-yds" firstAttribute="top" secondItem="krm-qM-O3l" secondAttribute="bottom" constant="10" id="Ei2-zx-Nt6"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="trailing" secondItem="krm-qM-O3l" secondAttribute="trailing" id="HXc-9f-Je8"/>
@@ -112,6 +126,7 @@
                             <constraint firstItem="anH-68-myp" firstAttribute="trailing" secondItem="M2K-Ex-yds" secondAttribute="trailing" id="aKx-c0-jDp"/>
                             <constraint firstItem="anH-68-myp" firstAttribute="top" secondItem="M2K-Ex-yds" secondAttribute="bottom" constant="24" id="aPz-rc-u90"/>
                             <constraint firstItem="BMi-o0-7L8" firstAttribute="centerX" secondItem="m1y-1j-cMv" secondAttribute="centerX" id="agg-gP-hvd"/>
+                            <constraint firstItem="7mE-2A-vrC" firstAttribute="centerX" secondItem="BMi-o0-7L8" secondAttribute="centerX" id="aoC-Zg-qs0"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bgb-EA-qgt"/>
                             <constraint firstItem="BMi-o0-7L8" firstAttribute="top" secondItem="m1y-1j-cMv" secondAttribute="bottom" constant="20" id="cXf-yM-NfV"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="trailing" secondItem="R14-ME-uVA" secondAttribute="trailing" id="dX2-WU-dF3"/>
@@ -119,6 +134,8 @@
                             <constraint firstItem="m1y-1j-cMv" firstAttribute="centerX" secondItem="dZ4-Le-U6j" secondAttribute="centerX" id="kJY-pq-gv7"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="trailing" secondItem="Qt9-Kp-DXd" secondAttribute="trailing" id="m86-rc-Ypj"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="leading" secondItem="Qt9-Kp-DXd" secondAttribute="leading" id="oQu-V8-EsU"/>
+                            <constraint firstItem="dZ4-Le-U6j" firstAttribute="top" secondItem="rZD-zL-jMM" secondAttribute="bottom" constant="14" id="oYc-T9-9mR"/>
+                            <constraint firstItem="7mE-2A-vrC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="sE8-R0-WC5"/>
                             <constraint firstItem="ktI-wg-KUE" firstAttribute="leading" secondItem="M2K-Ex-yds" secondAttribute="leading" id="slp-pi-gTT"/>
                             <constraint firstItem="krm-qM-O3l" firstAttribute="trailing" secondItem="M2K-Ex-yds" secondAttribute="trailing" id="uV0-vT-nuI"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="16" id="wop-C1-EHx"/>
@@ -128,13 +145,16 @@
                     </view>
                     <connections>
                         <outlet property="butConnect" destination="M2K-Ex-yds" id="rHM-0H-hjG"/>
+                        <outlet property="captureButton" destination="rZD-zL-jMM" id="Le3-WD-PXh"/>
                         <outlet property="connectButton" destination="dZ4-Le-U6j" id="DEA-yj-Guo"/>
                         <outlet property="killButton" destination="BMi-o0-7L8" id="s2K-Zb-amK"/>
+                        <outlet property="myLabel" destination="ANq-OS-WMB" id="989-PU-ebq"/>
                         <outlet property="progress" destination="anH-68-myp" id="XWS-pR-6FT"/>
                         <outlet property="readButton" destination="m1y-1j-cMv" id="kjg-UG-PUm"/>
                         <outlet property="switcher" destination="krm-qM-O3l" id="qq0-nU-zLb"/>
                         <outlet property="txtPwd" destination="R14-ME-uVA" id="CNA-3F-AHN"/>
                         <outlet property="txtSSID" destination="Qt9-Kp-DXd" id="9JE-Wx-tQf"/>
+                        <outlet property="viewPreview" destination="7mE-2A-vrC" id="b4q-e1-5pN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
