--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -73,34 +73,19 @@
                                 <color key="textColor" red="0.53725490200000003" green="0.53725490200000003" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZ4-Le-U6j">
-                                <rect key="frame" x="134" y="374" width="107" height="30"/>
-                                <state key="normal" title="Server Connect"/>
-                                <connections>
-                                    <action selector="connectButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FdK-LA-SHL"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1y-1j-cMv">
-                                <rect key="frame" x="152" y="412" width="71" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1y-1j-cMv">
+                                <rect key="frame" x="152" y="419" width="71" height="30"/>
                                 <state key="normal" title="Read Data"/>
                                 <connections>
                                     <action selector="readButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zhx-b5-cPg"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BMi-o0-7L8">
-                                <rect key="frame" x="155" y="450" width="65" height="30"/>
-                                <state key="normal" title="Net Clear"/>
-                                <connections>
-                                    <action selector="killButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cqo-B0-yGq"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7mE-2A-vrC">
-                                <rect key="frame" x="67" y="510" width="240" height="128"/>
+                                <rect key="frame" x="67" y="524" width="235" height="114"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uvS-b4-evL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uvS-b4-evL">
                                 <rect key="frame" x="242" y="311" width="101" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Unbind Device"/>
                                 <connections>
                                     <action selector="unbindButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YJ1-Co-KZj"/>
@@ -119,43 +104,39 @@
                             <constraint firstItem="rZD-zL-jMM" firstAttribute="centerX" secondItem="anH-68-myp" secondAttribute="centerX" constant="-114.5" id="14P-6H-0hn"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="top" secondItem="ICH-LN-aj3" secondAttribute="bottom" constant="2" id="B3z-t4-meO"/>
                             <constraint firstItem="krm-qM-O3l" firstAttribute="top" secondItem="R14-ME-uVA" secondAttribute="bottom" constant="10" id="BcH-SB-hHe"/>
-                            <constraint firstItem="7mE-2A-vrC" firstAttribute="top" secondItem="BMi-o0-7L8" secondAttribute="bottom" constant="44" id="Bs1-sA-x7j"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7mE-2A-vrC" secondAttribute="bottom" constant="29" id="CId-lz-6TD"/>
-                            <constraint firstItem="dZ4-Le-U6j" firstAttribute="top" secondItem="anH-68-myp" secondAttribute="bottom" constant="102" id="Cni-zo-lhy"/>
                             <constraint firstItem="M2K-Ex-yds" firstAttribute="top" secondItem="krm-qM-O3l" secondAttribute="bottom" constant="10" id="Ei2-zx-Nt6"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="trailing" secondItem="krm-qM-O3l" secondAttribute="trailing" id="HXc-9f-Je8"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="J4a-z2-tms"/>
-                            <constraint firstItem="m1y-1j-cMv" firstAttribute="top" secondItem="dZ4-Le-U6j" secondAttribute="bottom" constant="1" id="NrP-j8-q11"/>
+                            <constraint firstItem="uvS-b4-evL" firstAttribute="trailing" secondItem="anH-68-myp" secondAttribute="trailing" id="KnB-AW-53l"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="top" secondItem="Qt9-Kp-DXd" secondAttribute="bottom" constant="25" id="RiZ-JZ-Eql"/>
+                            <constraint firstItem="rZD-zL-jMM" firstAttribute="top" secondItem="anH-68-myp" secondAttribute="bottom" constant="39" id="RoV-3a-jBc"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="leading" secondItem="ktI-wg-KUE" secondAttribute="leading" id="SMa-DK-FXM"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="leading" secondItem="Qt9-Kp-DXd" secondAttribute="leading" id="Uds-pq-l6b"/>
                             <constraint firstItem="M2K-Ex-yds" firstAttribute="top" secondItem="ktI-wg-KUE" secondAttribute="bottom" constant="5" id="VqA-Ef-Vl5"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="top" secondItem="ANq-OS-WMB" secondAttribute="bottom" constant="8" symbolic="YES" id="Ysy-TX-fVe"/>
                             <constraint firstItem="anH-68-myp" firstAttribute="trailing" secondItem="M2K-Ex-yds" secondAttribute="trailing" id="aKx-c0-jDp"/>
                             <constraint firstItem="anH-68-myp" firstAttribute="top" secondItem="M2K-Ex-yds" secondAttribute="bottom" constant="24" id="aPz-rc-u90"/>
-                            <constraint firstItem="BMi-o0-7L8" firstAttribute="centerX" secondItem="m1y-1j-cMv" secondAttribute="centerX" constant="-3" id="agg-gP-hvd"/>
-                            <constraint firstItem="7mE-2A-vrC" firstAttribute="centerX" secondItem="BMi-o0-7L8" secondAttribute="centerX" id="aoC-Zg-qs0"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bgb-EA-qgt"/>
-                            <constraint firstItem="BMi-o0-7L8" firstAttribute="top" secondItem="m1y-1j-cMv" secondAttribute="bottom" constant="1" id="cXf-yM-NfV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7mE-2A-vrC" secondAttribute="trailing" constant="57" id="cdG-Xv-ITe"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="trailing" secondItem="R14-ME-uVA" secondAttribute="trailing" id="dX2-WU-dF3"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="trailing" secondItem="ANq-OS-WMB" secondAttribute="trailing" id="hXE-cQ-qc2"/>
-                            <constraint firstItem="m1y-1j-cMv" firstAttribute="centerX" secondItem="dZ4-Le-U6j" secondAttribute="centerX" constant="3" id="kJY-pq-gv7"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="trailing" secondItem="Qt9-Kp-DXd" secondAttribute="trailing" id="m86-rc-Ypj"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="leading" secondItem="Qt9-Kp-DXd" secondAttribute="leading" id="oQu-V8-EsU"/>
-                            <constraint firstItem="dZ4-Le-U6j" firstAttribute="top" secondItem="rZD-zL-jMM" secondAttribute="bottom" constant="33" id="oYc-T9-9mR"/>
+                            <constraint firstAttribute="bottom" secondItem="m1y-1j-cMv" secondAttribute="bottom" constant="218" id="rxE-lL-pdy"/>
                             <constraint firstItem="7mE-2A-vrC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="sE8-R0-WC5"/>
                             <constraint firstItem="ktI-wg-KUE" firstAttribute="leading" secondItem="M2K-Ex-yds" secondAttribute="leading" id="slp-pi-gTT"/>
+                            <constraint firstItem="m1y-1j-cMv" firstAttribute="centerX" secondItem="anH-68-myp" secondAttribute="centerX" id="t4y-Q7-gVq"/>
                             <constraint firstItem="krm-qM-O3l" firstAttribute="trailing" secondItem="M2K-Ex-yds" secondAttribute="trailing" id="uV0-vT-nuI"/>
+                            <constraint firstItem="7mE-2A-vrC" firstAttribute="top" secondItem="m1y-1j-cMv" secondAttribute="bottom" constant="75" id="uux-hB-9h6"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="16" id="wop-C1-EHx"/>
-                            <constraint firstItem="dZ4-Le-U6j" firstAttribute="centerX" secondItem="anH-68-myp" secondAttribute="centerX" id="zCz-2l-kFc"/>
+                            <constraint firstItem="rZD-zL-jMM" firstAttribute="baseline" secondItem="uvS-b4-evL" secondAttribute="baseline" id="yQU-EM-yIB"/>
                             <constraint firstItem="anH-68-myp" firstAttribute="leading" secondItem="M2K-Ex-yds" secondAttribute="leading" id="zHf-Qu-gap"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="butConnect" destination="M2K-Ex-yds" id="rHM-0H-hjG"/>
                         <outlet property="captureButton" destination="rZD-zL-jMM" id="Le3-WD-PXh"/>
-                        <outlet property="connectButton" destination="dZ4-Le-U6j" id="DEA-yj-Guo"/>
-                        <outlet property="killButton" destination="BMi-o0-7L8" id="s2K-Zb-amK"/>
                         <outlet property="myLabel" destination="ANq-OS-WMB" id="989-PU-ebq"/>
                         <outlet property="progress" destination="anH-68-myp" id="XWS-pR-6FT"/>
                         <outlet property="readButton" destination="m1y-1j-cMv" id="kjg-UG-PUm"/>
