--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -73,16 +73,11 @@
                                 <color key="textColor" red="0.53725490200000003" green="0.53725490200000003" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7mE-2A-vrC">
-                                <rect key="frame" x="67" y="524" width="235" height="114"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="top" secondItem="ICH-LN-aj3" secondAttribute="bottom" constant="2" id="B3z-t4-meO"/>
                             <constraint firstItem="krm-qM-O3l" firstAttribute="top" secondItem="R14-ME-uVA" secondAttribute="bottom" constant="10" id="BcH-SB-hHe"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7mE-2A-vrC" secondAttribute="bottom" constant="29" id="CId-lz-6TD"/>
                             <constraint firstItem="M2K-Ex-yds" firstAttribute="top" secondItem="krm-qM-O3l" secondAttribute="bottom" constant="10" id="Ei2-zx-Nt6"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="trailing" secondItem="krm-qM-O3l" secondAttribute="trailing" id="HXc-9f-Je8"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="J4a-z2-tms"/>
@@ -94,12 +89,10 @@
                             <constraint firstItem="anH-68-myp" firstAttribute="trailing" secondItem="M2K-Ex-yds" secondAttribute="trailing" id="aKx-c0-jDp"/>
                             <constraint firstItem="anH-68-myp" firstAttribute="top" secondItem="M2K-Ex-yds" secondAttribute="bottom" constant="24" id="aPz-rc-u90"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bgb-EA-qgt"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7mE-2A-vrC" secondAttribute="trailing" constant="57" id="cdG-Xv-ITe"/>
                             <constraint firstItem="Qt9-Kp-DXd" firstAttribute="trailing" secondItem="R14-ME-uVA" secondAttribute="trailing" id="dX2-WU-dF3"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="trailing" secondItem="ANq-OS-WMB" secondAttribute="trailing" id="hXE-cQ-qc2"/>
                             <constraint firstItem="ICH-LN-aj3" firstAttribute="trailing" secondItem="Qt9-Kp-DXd" secondAttribute="trailing" id="m86-rc-Ypj"/>
                             <constraint firstItem="R14-ME-uVA" firstAttribute="leading" secondItem="Qt9-Kp-DXd" secondAttribute="leading" id="oQu-V8-EsU"/>
-                            <constraint firstItem="7mE-2A-vrC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="sE8-R0-WC5"/>
                             <constraint firstItem="ktI-wg-KUE" firstAttribute="leading" secondItem="M2K-Ex-yds" secondAttribute="leading" id="slp-pi-gTT"/>
                             <constraint firstItem="krm-qM-O3l" firstAttribute="trailing" secondItem="M2K-Ex-yds" secondAttribute="trailing" id="uV0-vT-nuI"/>
                             <constraint firstItem="ANq-OS-WMB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="16" id="wop-C1-EHx"/>
@@ -113,7 +106,7 @@
                         <outlet property="switcher" destination="krm-qM-O3l" id="qq0-nU-zLb"/>
                         <outlet property="txtPwd" destination="R14-ME-uVA" id="CNA-3F-AHN"/>
                         <outlet property="txtSSID" destination="Qt9-Kp-DXd" id="9JE-Wx-tQf"/>
-                        <outlet property="viewPreview" destination="7mE-2A-vrC" id="b4q-e1-5pN"/>
+                        <segue destination="qNP-60-ZVa" kind="show" identifier="GoToMainMenuFromWifiConfig" id="eUJ-Mr-erF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -135,16 +128,25 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rvw-fd-URd">
                                 <rect key="frame" x="137" y="210" width="101" height="30"/>
                                 <state key="normal" title="Configure WiFi"/>
+                                <connections>
+                                    <action selector="wifiConfigButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="mI5-Pr-tPf"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAG-nO-S28">
                                 <rect key="frame" x="162" y="420" width="50" height="30"/>
                                 <state key="normal" title="Unbind">
                                     <color key="titleColor" red="1" green="0.023286350454939653" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="unbindButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="JbI-qt-C7D"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7qI-zz-zxW">
                                 <rect key="frame" x="152" y="318" width="71" height="30"/>
                                 <state key="normal" title="Read Data"/>
+                                <connections>
+                                    <action selector="readDataButtonPressed:" destination="ddT-nb-DYf" eventType="touchUpInside" id="ZRQ-t4-VYY"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -159,8 +161,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="Main Menu" id="fdr-Si-EO8"/>
                     <connections>
-                        <segue destination="wMN-eM-Xuy" kind="show" id="u1I-cX-jlx"/>
-                        <segue destination="BYZ-38-t0r" kind="show" id="cHb-jO-DhW"/>
+                        <outlet property="readDataButton" destination="7qI-zz-zxW" id="szp-wn-2SV"/>
+                        <outlet property="unbindButton" destination="fAG-nO-S28" id="DEI-J5-NqM"/>
+                        <outlet property="wifiConfigButton" destination="rvw-fd-URd" id="Twx-Bs-8dC"/>
+                        <segue destination="wMN-eM-Xuy" kind="show" identifier="NavigateToReadData" id="u1I-cX-jlx"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="NavigateToWifiConfig" id="cHb-jO-DhW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UYY-WS-rLT" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -180,10 +185,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BcI-bV-mn0">
-                                <rect key="frame" x="0.0" y="220" width="375" height="447"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="RNR-80-OJz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="RNR-80-OJz">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RNR-80-OJz" id="0dS-eO-l0Y">
@@ -198,10 +203,13 @@
                         <constraints>
                             <constraint firstItem="BcI-bV-mn0" firstAttribute="leading" secondItem="Ft6-U0-BOV" secondAttribute="leading" id="565-8b-jgc"/>
                             <constraint firstItem="BcI-bV-mn0" firstAttribute="bottom" secondItem="VXT-6K-LOa" secondAttribute="top" id="Cgt-Cn-aBf"/>
-                            <constraint firstItem="BcI-bV-mn0" firstAttribute="top" secondItem="caU-jJ-glL" secondAttribute="bottom" constant="156" id="VZn-6i-1Dg"/>
+                            <constraint firstItem="BcI-bV-mn0" firstAttribute="top" secondItem="caU-jJ-glL" secondAttribute="bottom" id="VZn-6i-1Dg"/>
                             <constraint firstAttribute="trailing" secondItem="BcI-bV-mn0" secondAttribute="trailing" id="aP4-6k-CkD"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="BcI-bV-mn0" id="L78-UP-oAj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QHu-2D-GPM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -244,10 +252,10 @@
             </objects>
             <point key="canvasLocation" x="-375.19999999999999" y="374.66266866566718"/>
         </scene>
-        <!--View Controller-->
+        <!--Bind Success View Controller-->
         <scene sceneID="WyN-Yy-dcH">
             <objects>
-                <viewController id="dwy-8T-XTb" sceneMemberID="viewController">
+                <viewController id="dwy-8T-XTb" customClass="BindSuccessViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="r6s-5C-Sed"/>
                         <viewControllerLayoutGuide type="bottom" id="Nmf-fD-ppv"/>
@@ -259,6 +267,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pgT-Zw-Uku">
                                 <rect key="frame" x="134" y="318" width="107" height="30"/>
                                 <state key="normal" title="WiFiコンフィグ"/>
+                                <connections>
+                                    <action selector="wifiConfigButtonPressed:" destination="dwy-8T-XTb" eventType="touchUpInside" id="0ow-7l-02Q"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登録完了" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPC-Qj-OOE">
                                 <rect key="frame" x="114" y="236" width="146" height="43"/>
@@ -269,6 +280,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Afr-Ca-253">
                                 <rect key="frame" x="141" y="356" width="92" height="30"/>
                                 <state key="normal" title="次へスキップ"/>
+                                <connections>
+                                    <action selector="skipButtonPressed:" destination="dwy-8T-XTb" eventType="touchUpInside" id="q6k-Xb-Lez"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -283,8 +297,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="cls-MK-EeF"/>
                     <connections>
-                        <segue destination="qNP-60-ZVa" kind="show" id="p4p-N9-So5"/>
-                        <segue destination="BYZ-38-t0r" kind="show" id="qtU-Vd-BpH"/>
+                        <outlet property="skipButton" destination="Afr-Ca-253" id="aNr-ko-mh3"/>
+                        <outlet property="wifiConfigButton" destination="pgT-Zw-Uku" id="1bk-hb-B2m"/>
+                        <segue destination="qNP-60-ZVa" kind="show" identifier="GoToMainMenuFromSuccessScreen" id="p4p-N9-So5"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="ConfigWifiFromSuccessScreen" id="qtU-Vd-BpH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hSp-cK-C0d" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -354,7 +370,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="amc-2I-Kr4"/>
+        <segue reference="eUJ-Mr-erF"/>
         <segue reference="cHb-jO-DhW"/>
     </inferredMetricsTieBreakers>
 </document>
