--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -229,7 +229,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="RNR-80-OJz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="RNR-80-OJz">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RNR-80-OJz" id="0dS-eO-l0Y">
@@ -360,27 +360,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lvA-Bt-Hfa">
-                                <rect key="frame" x="48" y="92" width="279" height="483"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FO3-5W-0t3">
-                                <rect key="frame" x="157" y="616" width="61" height="10"/>
-                                <state key="normal" title="&lt; Cancel"/>
+                                <rect key="frame" x="163.5" y="616" width="48" height="10"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="1" green="0.02328635045" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="cancelButtonPressed:" destination="LhS-cp-hfv" eventType="touchUpInside" id="4u9-Ga-IoU"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lvA-Bt-Hfa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="lvA-Bt-Hfa" firstAttribute="centerX" secondItem="YYp-yJ-SZM" secondAttribute="centerX" id="9So-Qx-7cb"/>
-                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="top" secondItem="8rm-Hl-02X" secondAttribute="bottom" constant="72" id="L3M-HI-S5C"/>
-                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="leading" secondItem="YYp-yJ-SZM" secondAttribute="leadingMargin" constant="32" id="LAy-uW-5E9"/>
+                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="top" secondItem="8rm-Hl-02X" secondAttribute="bottom" constant="-20" id="L3M-HI-S5C"/>
+                            <constraint firstItem="lvA-Bt-Hfa" firstAttribute="leading" secondItem="YYp-yJ-SZM" secondAttribute="leadingMargin" constant="-16" id="LAy-uW-5E9"/>
                             <constraint firstItem="FO3-5W-0t3" firstAttribute="centerX" secondItem="lvA-Bt-Hfa" secondAttribute="centerX" id="cZ4-QD-mBd"/>
                             <constraint firstItem="SzC-T4-AmL" firstAttribute="top" secondItem="FO3-5W-0t3" secondAttribute="bottom" constant="41" id="hS4-3k-uYr"/>
                             <constraint firstItem="lvA-Bt-Hfa" firstAttribute="centerY" secondItem="YYp-yJ-SZM" secondAttribute="centerY" id="mJq-do-N2J"/>
-                            <constraint firstItem="FO3-5W-0t3" firstAttribute="top" secondItem="lvA-Bt-Hfa" secondAttribute="bottom" constant="41" id="o18-gN-rCg"/>
+                            <constraint firstItem="FO3-5W-0t3" firstAttribute="top" secondItem="lvA-Bt-Hfa" secondAttribute="bottom" constant="-51" id="o18-gN-rCg"/>
                         </constraints>
                     </view>
                     <connections>
@@ -390,7 +392,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f3X-Ba-pah" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-378.26086956521743" y="1073.6413043478262"/>
+            <point key="canvasLocation" x="-378.39999999999998" y="1073.6131934032985"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QkB-bX-Gkp">
